# OGL-Breakout

./: CMakeLists.txt  README.md
include/: game.hpp  resourceManager.hpp  shader.hpp  texture.hpp
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/stb_image/: CMakeLists.txt
lib/stb_image/include/: stb_image.h
src/: game.cpp  program.cpp  resourceManager.cpp  shader.cpp  texture.cpp
